build: improving build script